Fix deprecated Integer instanciations